[package]
name = "kernel_with_bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.11.3"
bootloader-x86_64-common = "0.11.3"
x86_64 = "0.14.2"
noto-sans-mono-bitmap = "0.2.0" #for our framebuffer writer
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9.8"
good_memory_allocator = "0.1.7"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

